--- a/src/main/webapp/WEB-INF/classes/view_1.html
+++ b/src/main/webapp/WEB-INF/classes/view_1.html
@@ -1,6 +1,6 @@
 <h2 id="forms-help-text">{{template.name}} #{{document.id}}</h2>
 
-<form class="form">
+<form class="form" name="form">
     <div class="form-group">
         <label for="document.reception.place">Больной осмотрен непосредственно при поступлении в</label>
         <input type="text" class="form-control" id="document.reception.place" ng-model="document.reception.place">
@@ -11,11 +11,12 @@
     </div>
     <div class="form-group">
         <label for="document.patient.name">Больной (ФИО)</label>
-        <input type="text" class="form-control" id="document.patient.name" ng-model="document.patient.name">
+        <input type="text" class="form-control" id="document.patient.name" ng-model="document.patient.name" readonly="true">
+        <button class="btn btn-default" dictionary="patients" target="document.patient">Выбрать</button>
     </div>
-    <div class="form-group">
+    <div class="form-group ">
         <label for="document.doctor.name">Больного принял врач-невролог (ФИО)</label>
         <input type="text" class="form-control" id="document.doctor.name" ng-model="document.doctor.name">
     </div>
-    <a class="btn btn-primary" role="button" ng-click="update(document)">Сохранить</a>
+    <a class="btn btn-primary" role="button" ng-click="update(document)" ng-disabled="form.$pristine">Сохранить</a>
 </form>
